@@ -38,7 +38,6 @@
 #include "interfaces/delays.h"
 #include "interfaces/portability.h"
 #include "interfaces/arch_registers.h"
-#include "interfaces/console.h"
 #include "config/miosix_settings.h"
 #include "kernel/logging.h"
 #include "filesystem/ioctl.h"
